Fix group item wrapping

--- a/app/static/css/group.css
+++ b/app/static/css/group.css
@@ -23,13 +23,14 @@
     height: 100%;
     margin-top: 35px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .user {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     background-color: #f9f7ff;
     border: 1px solid #ddd;
-    margin: 0 auto;
+    margin: 5px auto;
     min-width: 140px;
     min-height: 130px;
     display: grid;
